themes/jingdong2014/style.css
/* ... */
#showcase .sc-list .item .s-ext b {
    display: inline-block;
    padding: 0 2px;
    font-size: 12px;
    font-weight: 400;
}

#showcase .sc-list .item.w-bg .s-ext b {
    padding: 0;
    color: #ea6365;
    font-family: "microsoft yahei";
    background: 0
}

#showcase .sc-list .item .s-hotword {
    padding: 20px 0 0
}

#showcase .sc-list .item .s-hotword li {
    position: relative;
    line-height: 18px;
    padding-left: 6px;
    height: 18px;
    overflow: hidden;
    color: #888;
    font-family: "microsoft yahei"
}

#showcase .sc-list .item .s-hotword li i {
    position: absolute;
    display: block;
    overflow: hidden;
    vertical-align: middle;
    left: 0;
    top: 8px;
    width: 2px;
    height: 2px;
    background: #999
}

#showcase .sc-list .item .s-img {
    display: block;
    width: 295px;
    height: 190px
}

#showcase .sc-list .item .s-img img {
    display: block;
    position: absolute;
    left: 0;
    top: 0
}

#showcase.advanced .sc-list .item .s-img img {
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
    transition: all .3s ease;
    left: 0
}

#showcase .sc-ext .item {
    float: left;
    width: 323px;
    height: 70px;
    margin-right: 11px;
    overflow: hidden
}

.root61 #showcase .sc-ext .item {
    width: 396px
}

#mscroll-list {
    position: relative;
    width: 489px;
    height: 159px;
    overflow: hidden;
}

.root61 #mscroll-list {
    width: 609px;
}

#mscroll .list img {
    width: 162px;
    height: 159px;
    display: block;
}

.root61 #mscroll .list img {
    width: 202px;
    height: 159px;
}

.virtuals-w {
    display: none;
}

.virtuals-s {
    display: block;
}

.root61 .virtuals-s {
    display: none;
}

.root61 .virtuals-w {
    display: block;
}

.catalogue,
.catalogue .mt {
    overflow: visible
}

.catalogue {
    float: left;
    width: 210px;
    margin-bottom: 0
}

.catalogue .mt {
    height: 30px;
    padding: 0
}

.catalogue h2 {
    position: absolute;
    top: 0;
    overflow: hidden;
    left: 2em;
    height: 24px;
    line-height: 24px;
    font-size: 18px;
    font-weight: 500;
}

.catalogue #cat_top .floor {
    position: absolute;
    top: -8px;
    left: 0
}

.catalogue #cat_top .floor .b1,
.catalogue #cat_top .floor .b2,
.catalogue #cat_top .floor .b4 {
    background-image: url(images/20130330C.png);
    background-repeat: no-repeat
}

.catalogue #cat_top .floor .b {
    top: 0;
    left: 0;
    width: 26px;
    height: 34px;
    overflow: hidden
}

.catalogue #cat_top .floor .b1 {
    z-index: 1;
    background-position: 0 0
}

.catalogue #cat_top .floor .b2 {
    z-index: 2;
    height: 0;
    background-position: -40px 0
}

.catalogue #cat_top .floor .b3 {
    z-index: 3;
    text-align: center;
    line-height: 30px;
    font-size: 18px;
    color: #FFF;
}

.catalogue #cat_top .floor .b4 {
    top: 30px;
    left: 4px;
    width: 18px;
    height: 7px;
    overflow: hidden;
    background-position: -80px 0
}

.catalogue .mc {
    position: relative;
    height: 361px;
    background: #fff;
    transition: all .3s;
    z-index: 1;
}

.catalogue .mc:hover {
    /*z-index: 2;*/
}

.catalogue ul {
    position: absolute;
    top: 0;
    left: 0;
    padding: 10px
}

.catalogue .style1 ul {
    width: 198px
}

.catalogue li {
    line-height: 28px;
    overflow: hidden;
    vertical-align: bottom
}

.catalogue .style1 li a {
    display: inline-block;
    width: 80px;
    margin: 0 8px;
    border-bottom: 1px dotted #eee;
    text-decoration: none;
}

.catalogue span {
    position: absolute;
    line-height: 0;
    font-size: 0
}

.catalogue .style1 span {
    bottom: 0;
    left: 0
}

.plist {
    position: relative;
    float: left;
    width: 790px;
    padding-top: 32px;
    margin-bottom: 0
}

.tab-arrow {
    position: absolute;
    z-index: 1;
    top: 23px;
    left: 0;
    height: 7px;
    border-bottom: 2px solid #E4393C;
    overflow: hidden;
    text-align: center
}

.plist .tab-arrow {
    width: 156px
}

.root61 .plist .tab-arrow {
    width: 158px
}

.tab-arrow b {
    display: inline-block;
    margin-top: -8px;
    width: 0;
    height: 0;
    border-style: dashed dashed solid;
    border-width: 10px;
    border-color: transparent transparent #E4393C;
    overflow: hidden;
    zoom: 1;
    font-size: 0
}

.plist .sm {
    margin-bottom: 0
}

.plist .smt {
    width: 156px
}

.plist .fore1 .smt {
    left: 0
}

.plist .smc {
    position: relative;
    height: 362px;
    background: #fff;
    transition: all .3s;
}

.plist .smc:hover {
    z-index: 2;
}

.plist .slide {
    position: absolute;
    top: 0;
    left: 158px;
    width: 473px;
    height: 180px;
    border: 1px solid #eee;
    border-top-color: transparent;
    overflow: hidden;
    margin: -1px 0 0 -1px;
    transition: all .3s;
}
.plist .slide:hover {
	border: 1px solid #ef383a;
	z-index: 2;
}

.slide .slide-itemswrap {
    position: relative;
    overflow: hidden
}

.plist .slide-itemswrap,
.plist .slide-items div {
    width: 473px;
    height: 180px;
    overflow: hidden
}

.plist .slide-items {
    height: 180px
}

.plist .slide-items div {
    float: left
}

.plist .slide-controls {
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 3;
    width: 473px;
    height: 16px;
    overflow: hidden;
    text-align: center;
    font-size: 0
}

.plist .slide-controls span {
    width: 36px;
    padding: 5px 0;
    background: 0;
    border-radius: 0;
    -moz-border-radius: 0;
    -webkit-border-radius: 0
}

.plist .slide-controls span b {
    display: block;
    height: 5px;
    background: rgba(0,0,0,.5);
    overflow: hidden
}

.plist .slide-controls .curr b {
    background: rgb(255,100,100);
}

.plist .smc ul.lh {
    width: 781px
}

.root61 .plist .smc ul.lh {
    width: 791px
}

.plist .smc li {
    padding: 5px 10px 0;
    /*border-left: 1px solid #F1F1F1;*/
    /*border-top: 1px solid #F1F1F1;*/
    overflow: hidden
}
/* ... */

